src/style.css
/*body { margin:0; padding:0; }*/

#map {
  height: 100%;
}

#map-container {
  height: 100vh;
}

/* small device */
.map-overlay-pane {
  background: rgba(255, 255, 255, 0.8);
  box-shadow: 0px 1px 2px 0px gray;
  top: 0;
  height: 100%;
  position: fixed;
  z-index: 3;
}

.map-overlay-pane--collapsed {
  animation: slideOut 0.5s ease-in-out both;
}

.map-overlay-pane--expanded {
  animation: slideIn 0.5s ease-in-out both;
}

@keyframes slideIn {
  0% {
    left: 100%;
  }
  100% {
    left: 0;
  }
}
@keyframes slideOut {
  0% {
    left: 0;
  }
  100% {
    left: 100%;
  }
}

/* tablet and up */
@media (min-width: 576px) {
  .map-overlay-pane {
    background: rgba(255, 255, 255, 0.8);
    border-radius: 3px;
    box-shadow: 0px 1px 2px 0px gray;
    top: 0;
    right: 0;
    height: 100%;
    position: fixed;
    animation: none;
  }
}

.open-pane-btn {
  position: absolute;
  top: 10px;
  right: 10px;
  z-index: 1;
}

.close-pane-btn {
  float: right;
}

.disclaimer {
  color: gray;
  font-size: 0.6em;
}

.trip-stats-container--mobile {
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  margin: 1rem;
}

/* Spinner */
/*https://projects.lukehaas.me/css-loaders/*/
.loader,
.loader:after {
  border-radius: 50%;
  width: 10em;
  height: 10em;
}

.loader {
  margin: 60px auto;
  font-size: 10px;
  position: relative;
  text-indent: -9999em;
  border-top: 1.1em solid rgba(67, 148, 218, 0.2);
  border-right: 1.1em solid rgba(67, 148, 218, 0.2);
  border-bottom: 1.1em solid rgba(67, 148, 218, 0.2);
  border-left: 1.1em solid #4394da;
  -webkit-transform: translateZ(0);
  -ms-transform: translateZ(0);
  transform: translateZ(0);
  -webkit-animation: load8 1.1s infinite linear;
  animation: load8 1.1s infinite linear;
}

@-webkit-keyframes load8 {
  0% {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

@keyframes load8 {
  0% {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

